# AgentFox

./: AGENTS.md  ANNOUNCEMENT.md  BLOG_POST.md  BUILD.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PLAN.md  PROJECT.md  PROMOTION.md  README.md  USAGE.md  install.sh  package.json  project.md
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: browser.rs  main.rs
demo/: demo.sh
docs/: getting-started.md
docs/internal/: AGENTS.md  agent_test.sh  bench.sh  project.md
prompts/: agentfox-core.md
protocol/: Cargo.toml
protocol/src/: lib.rs
skill/: SKILL.md
