[workspace]
members = ["cli", "daemon", "protocol"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["AgentFox Contributors"]
description = "A fast, lightweight, daemon-backed browser runtime for AI agents."
repository = "https://github.com/user/AgentFox"
license = "MIT"
keywords = ["agent", "browser", "cli", "webkit", "runtime"]
categories = ["command-line-utilities", "web-programming"]

