[workspace]
members = ["cli", "daemon", "protocol"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["MaenExists"]
description = "A high-velocity, persistent browser built specifically for AI agents."
repository = "https://github.com/MaenExists/AgentFox"
license = "MIT"
keywords = ["agent", "browser", "cli", "webkit", "runtime"]
categories = ["command-line-utilities", "web-programming"]

