[package]
name = "afoxd"
version = "0.1.0"
edition = "2024"

[dependencies]
agentfox-protocol = { path = "../protocol" }
glib = "0.18"
gtk = "0.18"
javascriptcore = { package = "javascriptcore-rs", version = "1.1.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webkit2gtk = { version = "2.0.2", features = ["v2_40"] }
