[package]
name = "afoxd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persistent browser daemon for the AgentFox runtime."
repository.workspace = true

[dependencies]
agentfox-protocol = { path = "../protocol" }
glib = "0.18"
gtk = "0.18"
javascriptcore = { package = "javascriptcore-rs", version = "1.1.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
webkit2gtk = { version = "2.0.2", features = ["v2_40"] }
