[package]
name = "agentfox-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared JSON protocol for AgentFox CLI-daemon communication."
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
